[gd_scene load_steps=17 format=2]

[ext_resource path="res://imagenes/tile.png" type="Texture" id=1]
[ext_resource path="res://scripts/InterfazScript.gd" type="Script" id=2]
[ext_resource path="res://imagenes/stars_background_resized.png" type="Texture" id=3]
[ext_resource path="res://fonts/Pixeboy-z8XGD.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 4 )

[node name="Interfaz" type="CenterContainer"]
pause_mode = 2
self_modulate = Color( 0.305882, 1, 0.627451, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 600.0
margin_bottom = 800.0
texture = ExtResource( 3 )

[node name="Fondo" type="PanelContainer" parent="."]
self_modulate = Color( 0.419608, 1, 0.494118, 1 )
margin_left = 104.0
margin_top = 193.0
margin_right = 495.0
margin_bottom = 607.0

[node name="HBoxContainer" type="HBoxContainer" parent="Fondo"]
margin_left = 7.0
margin_top = 7.0
margin_right = 384.0
margin_bottom = 407.0
size_flags_horizontal = 0

[node name="Informacion" type="CenterContainer" parent="Fondo/HBoxContainer"]
margin_right = 250.0
margin_bottom = 400.0
rect_min_size = Vector2( 250, 0 )

[node name="Informacion" type="VBoxContainer" parent="Fondo/HBoxContainer/Informacion"]
margin_left = 29.0
margin_right = 221.0
margin_bottom = 400.0
custom_constants/separation = 30

[node name="GridContainer" type="GridContainer" parent="Fondo/HBoxContainer/Informacion/Informacion"]
margin_right = 192.0
margin_bottom = 55.0
custom_constants/vseparation = 5
custom_constants/hseparation = 20
columns = 2

[node name="_PuntajeM" type="Label" parent="Fondo/HBoxContainer/Informacion/Informacion/GridContainer"]
margin_right = 116.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 1 )
text = "Puntaje Mas Alto"

[node name="PuntajeM" type="Label" parent="Fondo/HBoxContainer/Informacion/Informacion/GridContainer"]
margin_left = 136.0
margin_right = 192.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 2 )
text = "9999999"

[node name="_Nivel" type="Label" parent="Fondo/HBoxContainer/Informacion/Informacion/GridContainer"]
margin_top = 15.0
margin_right = 116.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 3 )
text = "Nivel"

[node name="Nivel" type="Label" parent="Fondo/HBoxContainer/Informacion/Informacion/GridContainer"]
margin_left = 136.0
margin_top = 15.0
margin_right = 192.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="_Puntaje" type="Label" parent="Fondo/HBoxContainer/Informacion/Informacion/GridContainer"]
margin_top = 30.0
margin_right = 116.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 5 )
text = "Puntaje"

[node name="Puntaje" type="Label" parent="Fondo/HBoxContainer/Informacion/Informacion/GridContainer"]
margin_left = 136.0
margin_top = 30.0
margin_right = 192.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="_Lineas" type="Label" parent="Fondo/HBoxContainer/Informacion/Informacion/GridContainer"]
margin_top = 45.0
margin_right = 116.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 7 )
text = "Líneas"

[node name="Lineas" type="Label" parent="Fondo/HBoxContainer/Informacion/Informacion/GridContainer"]
margin_left = 136.0
margin_top = 45.0
margin_right = 192.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 8 )
text = "0"

[node name="ContenedorSiguiente" type="CenterContainer" parent="Fondo/HBoxContainer/Informacion/Informacion"]
margin_top = 85.0
margin_right = 192.0
margin_bottom = 192.0

[node name="SiguienteForma" type="GridContainer" parent="Fondo/HBoxContainer/Informacion/Informacion/ContenedorSiguiente"]
margin_left = 69.0
margin_right = 122.0
margin_bottom = 107.0
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 2

[node name="TextureRect" type="TextureRect" parent="Fondo/HBoxContainer/Informacion/Informacion/ContenedorSiguiente/SiguienteForma"]
margin_right = 26.0
margin_bottom = 26.0
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="Fondo/HBoxContainer/Informacion/Informacion/ContenedorSiguiente/SiguienteForma"]
margin_left = 27.0
margin_right = 53.0
margin_bottom = 26.0
texture = ExtResource( 1 )

[node name="TextureRect3" type="TextureRect" parent="Fondo/HBoxContainer/Informacion/Informacion/ContenedorSiguiente/SiguienteForma"]
margin_top = 27.0
margin_right = 26.0
margin_bottom = 53.0
texture = ExtResource( 1 )

[node name="TextureRect4" type="TextureRect" parent="Fondo/HBoxContainer/Informacion/Informacion/ContenedorSiguiente/SiguienteForma"]
margin_left = 27.0
margin_top = 27.0
margin_right = 53.0
margin_bottom = 53.0
texture = ExtResource( 1 )

[node name="TextureRect5" type="TextureRect" parent="Fondo/HBoxContainer/Informacion/Informacion/ContenedorSiguiente/SiguienteForma"]
margin_top = 54.0
margin_right = 26.0
margin_bottom = 80.0
texture = ExtResource( 1 )

[node name="TextureRect6" type="TextureRect" parent="Fondo/HBoxContainer/Informacion/Informacion/ContenedorSiguiente/SiguienteForma"]
margin_left = 27.0
margin_top = 54.0
margin_right = 53.0
margin_bottom = 80.0
texture = ExtResource( 1 )

[node name="TextureRect7" type="TextureRect" parent="Fondo/HBoxContainer/Informacion/Informacion/ContenedorSiguiente/SiguienteForma"]
margin_top = 81.0
margin_right = 26.0
margin_bottom = 107.0
texture = ExtResource( 1 )

[node name="TextureRect8" type="TextureRect" parent="Fondo/HBoxContainer/Informacion/Informacion/ContenedorSiguiente/SiguienteForma"]
margin_left = 27.0
margin_top = 81.0
margin_right = 53.0
margin_bottom = 107.0
texture = ExtResource( 1 )

[node name="Nuevo Juego" type="Button" parent="Fondo/HBoxContainer/Informacion/Informacion"]
margin_top = 222.0
margin_right = 192.0
margin_bottom = 238.0
custom_fonts/font = SubResource( 9 )
text = "Nuevo Juego"

[node name="Pausa" type="Button" parent="Fondo/HBoxContainer/Informacion/Informacion"]
margin_top = 268.0
margin_right = 192.0
margin_bottom = 284.0
custom_fonts/font = SubResource( 10 )
text = "Pausa"

[node name="ApagarEncenderMusica" type="CheckButton" parent="Fondo/HBoxContainer/Informacion/Informacion"]
margin_top = 314.0
margin_right = 192.0
margin_bottom = 354.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Musica"

[node name="Salir" type="Button" parent="Fondo/HBoxContainer/Informacion/Informacion"]
margin_top = 384.0
margin_right = 192.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 12 )
text = "Salir"

[node name="PantallaJuego" type="MarginContainer" parent="Fondo/HBoxContainer"]
margin_left = 254.0
margin_right = 377.0
margin_bottom = 400.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="ColorRect" type="ColorRect" parent="Fondo/HBoxContainer/PantallaJuego"]
margin_left = 8.0
margin_top = 8.0
margin_right = 115.0
margin_bottom = 392.0
color = Color( 0, 0, 0, 1 )

[node name="Grilla" type="GridContainer" parent="Fondo/HBoxContainer/PantallaJuego"]
margin_left = 8.0
margin_top = 8.0
margin_right = 115.0
margin_bottom = 392.0
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 10

[node name="Celda" type="TextureRect" parent="Fondo/HBoxContainer/PantallaJuego/Grilla"]
margin_right = 26.0
margin_bottom = 26.0
texture = ExtResource( 1 )

[node name="Celda2" type="TextureRect" parent="Fondo/HBoxContainer/PantallaJuego/Grilla"]
margin_left = 27.0
margin_right = 53.0
margin_bottom = 26.0
texture = ExtResource( 1 )

[node name="Celda3" type="TextureRect" parent="Fondo/HBoxContainer/PantallaJuego/Grilla"]
margin_left = 54.0
margin_right = 80.0
margin_bottom = 26.0
texture = ExtResource( 1 )

[node name="Celda4" type="TextureRect" parent="Fondo/HBoxContainer/PantallaJuego/Grilla"]
margin_left = 81.0
margin_right = 107.0
margin_bottom = 26.0
texture = ExtResource( 1 )

[node name="Salida" type="ConfirmationDialog" parent="."]
margin_left = 199.0
margin_top = 371.0
margin_right = 401.0
margin_bottom = 429.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Gordot-Salir"
dialog_text = "¿Esta seguro que desea salir?"

[connection signal="button_down" from="Fondo/HBoxContainer/Informacion/Informacion/Nuevo Juego" to="." method="_on_Nuevo_Juego_button_down"]
[connection signal="button_down" from="Fondo/HBoxContainer/Informacion/Informacion/Pausa" to="." method="_on_Pausa_button_down"]
[connection signal="button_down" from="Fondo/HBoxContainer/Informacion/Informacion/ApagarEncenderMusica" to="." method="_on_ApagarEncenderMusica_button_down"]
[connection signal="button_down" from="Fondo/HBoxContainer/Informacion/Informacion/Salir" to="." method="_on_Salir_button_down"]
[connection signal="confirmed" from="Salida" to="." method="_on_Salida_confirmed"]
